Change println command to log with Sl4fj and set debug mode in project